--- a/Solar Explore/template.html
+++ b/Solar Explore/template.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="style.css">
   <title>Solar Explore</title>
+  <link rel="shortcut icon" href="sun.png" type="image/x-icon">
 </head>
 <body>
   </a><h1 class='logo'>
