--- a/Rubik Cube/index.html
+++ b/Rubik Cube/index.html
@@ -12,8 +12,8 @@
   <meta property="og:image" content="http://res.cloudinary.com/dpu5ywrox/image/upload/v1723554830/nhxjoxpw8zpxuzf9bytq.png"/>
   <meta property="og:site_name" content="The Cube - A Rubik's Cube Game"/>
   <meta property="og:title" content="The Cube - A Rubik's Cube Game"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="website"/>
+  <meta property="og:type" content="https://thecube-by-drs.netlify.app/"/>
+  <meta property="og:url" content="https://thecube-by-drs.netlify.app/"/>
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:creator" content="@DivyanshuRS">
@@ -35,9 +35,6 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128627708-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
