--- a/Bubble-Rush/index.html
+++ b/Bubble-Rush/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="Bubble Rush.png" type="image/x-icon">  
+  <title>Bubble Rush</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="main.js"></script>
+  </head>
+  <body>
+    <canvas id="c" tabindex="0"></canvas>
+
+    <!-- Popup modal -->
+    <div
+      id="popup"
+      style="display:none; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); background-color: rgba(51, 51, 51, 0.5); color: rgb(255, 255, 255); padding: 20px; border: 4px solid rgb(255, 187, 0); box-shadow: 0 0 15px rgb(255, 13, 0); z-index: 1000; text-align: center;"
+    >
+      <h2 style="margin: 0; font-size: 24px;">Warning</h2>
+      <p>All your progress will be erased. Do you want to restart?</p>
+      <button
+        id="confirmBtn"
+        style="background-color: #0f0; color: #000; padding: 10px 20px; margin: 10px; cursor: pointer; border: none;"
+      >
+        Yes
+      </button>
+      <button
+        id="cancelBtn"
+        style="background-color: #0f0; color: #000; padding: 10px 20px; margin: 10px; cursor: pointer; border: none;"
+      >
+        No
+      </button>
+    </div>
+
+    <!-- Background overlay -->
+    <div
+      id="overlay"
+      style="display:none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); z-index: 999;"
+    ></div>
+
+    <style>
+      /* Glow effect on hover for the buttons */
+      #confirmBtn:hover, #cancelBtn:hover {
+        box-shadow: 0 0 15px 5px rgb(68, 0, 255);
+      }
+    </style>
+
+    <footer>
+      <p>
+        Created by
+        <a
+          href="https://divyanshu0212.github.io/Divyanshu_Ranjan_Singh.github.io/"
+        >
+          Divyanshu Ranjan Singh
+        </a>
+      </p>
+    </footer>
+  </body>
+</html>
 
